--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.10.2",
-    "@strapi/plugin-users-permissions": "4.10.2",
     "@strapi/plugin-i18n": "4.10.2",
-    "mysql": "2.18.1"
+    "@strapi/plugin-users-permissions": "4.10.2",
+    "@strapi/strapi": "4.10.2",
+    "mysql": "2.18.1",
+    "pg": "^8.11.0",
+    "strapi-plugin-mux-video-uploader": "^2.6.0"
   },
   "author": {
     "name": "A Strapi developer"
